# rust-netlify-functions-example

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  netlify.toml  rust-toolchain
netlify/functions-src/dad-joke/: Cargo.toml
netlify/functions-src/dad-joke/src/: main.rs
netlify/functions-src/hello/: Cargo.toml
netlify/functions-src/hello/src/: main.rs
netlify/functions/hello/: Cargo.toml
public/: index.html
