[package]
edition = "2018"
name = "dad-joke"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Thanks to @chris
[dependencies]
aws_lambda_events = "0.6.3"
http = "0.2.8"
lambda_runtime = "0.6.0"
reqwest = { version = "0.11.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.138", features = ["derive"] }
tokio = "1.20.1"
